# SDL2_CMake

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat
cmake/: FindSDL2.cmake
src/: Game.cpp  Game.hpp  main.cpp
